feat: Implementación de clase Launcher para compatibilidad con jpackage y JavaFX
- Se creó una nueva clase `Launcher` que no extiende `Application`, permitiendo que `jpackage` genere ejecutables correctamente.
- Se actualizaron los scripts de empaquetado para usar la clase `Launcher` en lugar de `Main`, eliminando la necesidad de módulos JPMS externos de JavaFX.
- Se mejoró la gestión de directorios temporales en los scripts de empaquetado para evitar problemas de recursión infinita.
- Se añadieron dependencias de `javafx-base` y `javafx-media` en el archivo `pom.xml` para asegurar la correcta ejecución de la aplicación.